[package]
name = "makeshift"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.11.0-dev", features = [] }
bevy_mod_picking = "0.13"
uuid = "1.3.1"

[patch.crates-io]
bevy = { path = "../bevy" }
bevy_mod_picking = { path = "../bevy_mod_picking" }
bevy_mod_raycast = { path = "../bevy_mod_raycast" }
